help page content updated

--- a/src/game_authoring_environment/resources/help.html
+++ b/src/game_authoring_environment/resources/help.html
@@ -1,6 +1,7 @@
 
 <html>
 <body>
+	<h1>Help</h1>
 	<h3>Creation panel</h3>
 	<p>This is the top left panel. It allows the user to add and delete
 		scenes and actors as well as define actor behavior.</p>
@@ -27,6 +28,15 @@
 					below.</p>
 			</td>
 		</tr>
+				<tr>
+			<td>Behaviors</td>
+			<td>
+				<p>The Enter Tile Mode button allows the user to create tiles by dragging on the visial display. Clicking this button pops up an dialog box in which the user may enter the collision ID.</p>
+				<p>On clicking OK, another dialog box opens up where the user can decide whether or not to select the brick image</p> 
+				<p>Clicking ok on this dialog opens an image choosing dialog box </p>
+				<p>Back on the Behaviors panel, the Exit Tile Mode button disables tile creation mode.</p>
+			</td>
+		</tr>
 	</table>
 	<h3>Game editing panel</h3>
 	<p>This is the bottom left panel. It allows the user to edit scenes
@@ -37,16 +47,25 @@
 			<th>Functionality</th>
 		</tr>
 		<tr>
-			<td>Scene</td>
-			<td></td>
+			<td>Game</td>
+			<td>Under this tab the user can implement settings pertaining to the entire game such as player initial score etc.</td>
 		</tr>
 		<tr>
-			<td>Actors</td>
-			<td></td>
+			<td>Scene</td>
+			<td>Under this tab the user may select a scene's background.</td>
 		</tr>
+		<tr>
+			<td>Actor</td>
+			<td>Under this tab the user may select an actor's image and set attributes such as movement and shooting.</td>
+		</tr>
+		<tr>
+			<td>Player</td>
+			<td>Under this tab the user may select the player's image and set attributes such as name and shooting.</td>
+		</tr>
+		
 	</table>
-		<h3>Visual display</h3>
-		<p>This is the bottom right panel. The user can see the game that
-			they're editing here.</p>
-		<body>
+	<h3>Visual display</h3>
+	<p>This is the bottom right panel. The user can see the game that
+		they're editing here.</p>
+<body>
 </html>
