--- a/src/game_authoring_environment/resources/about.html
+++ b/src/game_authoring_environment/resources/about.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+	<h1>About</h1>
 	<p>OOGasalad by iTeam is a game authoring engine that you can use</p>
 	<p>to create, publish and play 2D side scrolling games eg. Mario,
 		Tiny</p>
